@@ -6,6 +6,7 @@
 * ma-validation-messages directive - Replace addControl method on child forms too
 * Fix for editing/updating points from static watchlist
 * Fix for being unable to remove all tags from a data point
+* Add option to display tags on point value directive label
 
 *Version 3.6.2*
 * Add inputs for script permissions to event handlers
